--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
 
 orbs:
-  browser-tools: circleci/browser-tools@1.1   
+  node: circleci/node@2.1.0   
 
 jobs:
   test:
