--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2.1      2Xkali run
+version: 2.1
 
 executors:
   linux:
@@ -9,7 +9,7 @@ executors:
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
 
 orbs:
-  node: circleci/node@2.1.0   
+  browser-tools: circleci/browser-tools@1.1   
 
 jobs:
   test:
